# vdtgraphics

./: .gitmodules  CMakeLists.txt  README.md  update_vdtmath.bat
include/vdtgraphics/: api.h  buffer.h  camera.h  color.h  command_buffer.h  common.h  context.h  font.h  graphic_resource.h  graphics.h  graphics_api.h  graphics_buffer.h  image.h  material.h  material_library.h  mesh.h  orthographic_camera.h  particle_system.h  platform.h  polygon_batch.h  primitive_batch.h  render_command.h  render_commands.h  render_state.h  render_target.h  renderable.h  renderer.h  renderer2d.h  renderer_2d.h  renderer_3d.h  resource_library.h  shader.h  shader_library.h  shader_program.h  shaders.h  sprite.h  sprite_batch.h  text_batch.h  text_renderer.h  texture.h  (+2 more)
include/vdtgraphics/api/opengl/: api_gl.h  buffer_gl.h  context_gl.h  graphics_api_gl.h  graphics_gl.h  renderable_gl.h  renderer2d_gl.h  renderer3d_gl.h  renderer_gl.h  shader_library_gl.h  shader_program_gl.h  texture_gl.h
include/vdtgraphics/meshes/: circle.h  primitive.h  quad.h
include/vdtgraphics/opengl/: graphics_api_gl.h  graphics_buffer_gl.h  opengl.h  renderable_gl.h  renderer_gl.h  shader_gl.h  shader_program_gl.h  texture_gl.h
include/vdtgraphics/opengl/glad/: glad.h
samples/sandbox/: CMakeLists.txt  main.cpp  texture_viewer.cpp  texture_viewer.h
samples/sandbox/solution/: imgui.ini
source/: api.cpp  buffer.cpp  camera.cpp  color.cpp  command_buffer.cpp  context.cpp  font.cpp  graphic_resource.cpp  graphics_api.cpp  graphics_buffer.cpp  image.cpp  index_buffer.cpp  material.cpp  material_library.cpp  mesh.cpp  orthographic_camera.cpp  particle_system.cpp  polygon_batch.cpp  primitive_batch.cpp  render_command.cpp  render_commands.cpp  render_target.cpp  renderable.cpp  renderer.cpp  renderer2d.cpp  renderer_2d.cpp  renderer_3d.cpp  shader.cpp  shader_library.cpp  shader_program.cpp  shaders.cpp  sprite.cpp  sprite_batch.cpp  text_batch.cpp  text_renderer.cpp  texture.cpp  texture_coords.cpp  texture_library.cpp  texture_rect.cpp  texture_viewer.cpp  (+1 more)
source/api/opengl/: api_gl.cpp  buffer_gl.cpp  context_gl.cpp  graphics_api_gl.cpp  graphics_buffer_gl.cpp  renderable_gl.cpp  renderer_gl.cpp  shader_gl.cpp  shader_library_gl.cpp  shader_program_gl.cpp  texture_gl.cpp
source/api/opengl/glad/: glad.cpp
source/meshes/: circle.cpp  quad.cpp
source/opengl/: graphics_api_gl.cpp  graphics_buffer_gl.cpp  renderable_gl.cpp  renderer_gl.cpp  shader_gl.cpp  shader_program_gl.cpp  texture_gl.cpp
source/opengl/glad/: glad.cpp
src/vdtgraphics/: api.cpp  api.h  buffer.cpp  buffer.h  camera.cpp  color.cpp  color.h  graphics.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  primitive_type.h  render_command.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.h  resource_library.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
src/vdtgraphics/api/opengl/: api_gl.cpp  api_gl.h  buffer_gl.cpp  buffer_gl.h  opengl.h  renderable_gl.cpp  renderable_gl.h  renderer2d_gl.cpp  renderer3d_gl.cpp  shader_gl.h  shader_program_gl.cpp
src/vdtgraphics/meshes/: circle.cpp  circle.h
